Set java version globally Add script to build native image