@@ -79,12 +79,8 @@ tasks.withType<JavaCompile> {
 
 tasks.quarkusBuild {
     System.setProperty("quarkus.container-image.group", project.group.toString())
-    System.setProperty("quarkus.container-image.name", "server")
-    System.setProperty("quarkus.container-image.tag", project.version.toString())
     System.setProperty("quarkus.container-image.additional-tags", "latest")
-    nativeArgs {
-        "additional-build-args" to "-H:-CheckToolchain"
-    }
+    System.setProperty("quarkus.native.additional-build-args", "-H:-CheckToolchain,--enable-preview")
 }
 
 spotless {
@@ -92,7 +88,6 @@ spotless {
         targetExclude("${relativeGeneratedCodeDirectory(layout, openApiCodeGenDir)}/**/*.java")
     }
 }
-
 sourceSets {
     getByName("main") {
         java {
